--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-mpx": "0.2.0"
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-mpx": "0.2.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0"
   },
   "devDependencies": {
     "@mpxjs/eslint-config": "*",
