--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "eslint-plugin-promise": "^6.0.0"
   },
   "devDependencies": {
+    "@mpxjs/core": "^2.7.52",
     "@mpxjs/eslint-config": "file:.",
     "eslint": "^8.22.0",
+    "react": "^18.2.0",
     "typescript": "^4.7.4"
   }
 }
