--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-mpx": "0.2.1",
@@ -33,7 +31,6 @@
   },
   "devDependencies": {
     "@mpxjs/eslint-config": "file:.",
-    "eslint": "^8.22.0",
-    "typescript": "^4.7.4"
+    "eslint": "^8.22.0"
   }
 }
