--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@mpxjs/eslint-config-monorepo",
-  "version": "1.0.5",
+  "version": "1.0.4",
   "description": "Mpx's ESLint config presets",
   "main": "index.js",
   "scripts": {
-    "release": "pnpm -r publish --access public"
+    "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "repository": {
     "type": "git",
