--- a/package.json
+++ b/package.json
@@ -41,14 +41,25 @@
     "bumpp": "^8.2.1",
     "eslint": "^9.24.0",
     "eslint-typegen": "^2.1.0",
+    "execa": "^9.5.2",
+    "jiti": "^2.4.2",
+    "tinyglobby": "^0.2.13",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.1",
+    "vue": "^3.5.13"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
+    "@typescript-eslint/parser": "^5.33.1",
     "eslint-flat-config-utils": "^2.0.1",
-    "eslint-plugin-mpx": "0.2.20-3",
-    "local-pkg": "^1.1.1"
+    "eslint-plugin-mpx": "0.2.20-4",
+    "eslint-plugin-n": "^17.17.0",
+    "eslint-plugin-vue": "^10.0.0",
+    "globals": "^16.0.0",
+    "local-pkg": "^1.1.1",
+    "mpx-eslint-parser": "^0.0.9",
+    "vue-eslint-parser": "^10.1.3"
   }
 }
