--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mpxjs/eslint-config",
   "type": "module",
-  "version": "1.0.10",
+  "version": "2.0.0-beta.0",
   "private": true,
   "description": "Mpx's ESLint config presets",
   "main": "./dist/index.js",
