--- a/package.json
+++ b/package.json
@@ -58,13 +58,13 @@
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint-flat-config-utils": "^2.0.1",
-    "eslint-plugin-mpx": "0.2.20-4",
+    "eslint-plugin-mpx": "0.2.22",
     "eslint-plugin-n": "^17.17.0",
     "eslint-plugin-vue": "^10.0.0",
     "globals": "^16.0.0",
     "jiti": "^2.4.2",
     "local-pkg": "^1.1.1",
-    "mpx-eslint-parser": "^0.0.13",
+    "mpx-eslint-parser": "^0.0.14",
     "vue-eslint-parser": "^10.1.3"
   }
 }
